--- a/Speeches/Speeches.csproj
+++ b/Speeches/Speeches.csproj
@@ -59,6 +59,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <AndroidResource Remove="Platforms\Android\Resources\values\styles.xml" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <MauiAsset Remove="Resources\Raw\AboutAssets.txt" />
 	  <MauiAsset Remove="Resources\Raw\speech.json" />
 	</ItemGroup>
